# wayle

./: .gitignore  .markdownlint.json  .prettierrc  Cargo.toml  LICENSE  README.md  flake.nix  tombi.toml  wayle-design
crates/wayle-common/: Cargo.toml
crates/wayle-common/src/: glob.rs  lib.rs  macros.rs  process.rs  property.rs  shell.rs  state.rs  watchers.rs
crates/wayle-common/src/property/: config.rs  mod.rs  traits.rs
crates/wayle-common/src/services/: mod.rs  registry.rs
crates/wayle-config/: Cargo.toml
crates/wayle-config/src/: click_action.rs  diagnostic.rs  docs.rs  lib.rs
crates/wayle-config/src/infrastructure/: error.rs  paths.rs  persistence.rs  schema.rs  secrets.rs  service.rs  toml_path.rs  watcher.rs
crates/wayle-config/src/infrastructure/loading/: circular_detection.rs  file_creation.rs  merging.rs  mod.rs
crates/wayle-config/src/infrastructure/themes/: mod.rs  palettes.rs  utils.rs
crates/wayle-config/src/property/: config.rs  mod.rs  traits.rs
crates/wayle-config/src/schemas/: battery.rs  media.rs  modules.rs  styling.rs
crates/wayle-config/src/schemas/bar/: mod.rs
crates/wayle-config/src/schemas/clock/: bar.rs  button.rs  dropdown.rs  general.rs  mod.rs  styling.rs
crates/wayle-config/src/schemas/general/: mod.rs
crates/wayle-config/src/schemas/modules/: mod.rs  types.rs
crates/wayle-config/src/schemas/osd/: mod.rs  types.rs
crates/wayle-config/src/schemas/styling/: components.rs  fonts.rs  mod.rs  palette.rs  theme.rs  types.rs
crates/wayle-config/src/schemas/types/: chart.rs  mod.rs
crates/wayle-config/src/schemas/wallpaper/: mod.rs  types.rs
crates/wayle-derive/: Cargo.toml
crates/wayle-derive/src/: lib.rs
crates/wayle-derive/tests/: apply_config_layer.rs  subscribe_changes.rs  update_from_toml.rs
crates/wayle-i18n/: Cargo.toml  build.rs
crates/wayle-i18n/locales/: .gitignore
crates/wayle-i18n/locales/en-US/: _common.ftl  _config.ftl
crates/wayle-i18n/locales/en-US/config/: _bar.ftl  _general.ftl  _notification_popup.ftl  _styling.ftl  _wallpaper.ftl
crates/wayle-i18n/src/: lib.rs
crates/wayle-icons/: Cargo.toml
crates/wayle-icons/src/: error.rs  lib.rs  manager.rs  registry.rs  transform.rs
crates/wayle-icons/src/sources/: lucide.rs  material.rs  mod.rs  simple_icons.rs  tabler.rs
crates/wayle-shell/: Cargo.toml  build.rs
crates/wayle-shell/locales/en-US/: _bar.ftl  _osd.ftl
crates/wayle-shell/locales/en-US/dropdowns/: _bluetooth.ftl  _dashboard.ftl  _network.ftl  _weather.ftl
crates/wayle-shell/src/: bootstrap.rs  i18n.rs  main.rs  startup.rs  tracing_init.rs  wallpaper_map.rs
crates/wayle-shell/src/bootstrap/: mod.rs  wallpaper.rs  weather.rs
crates/wayle-shell/src/services/: mod.rs
crates/wayle-shell/src/services/idle_inhibit/: state.rs
crates/wayle-shell/src/services/shell_ipc/: bar.rs  dbus.rs  mod.rs  state.rs
crates/wayle-shell/src/shell/: mod.rs  services.rs
crates/wayle-shell/src/shell/bar/: factory.rs  icons.rs  layout.rs  methods.rs  mod.rs  styling.rs
crates/wayle-shell/src/shell/helpers/: bootstrap.rs  layer_shell.rs  mod.rs  monitors.rs
crates/wayle-shell/src/shell/notification_popup/: helpers.rs  messages.rs  methods.rs  mod.rs  templates.rs  watchers.rs
crates/wayle-shell/src/shell/osd/: messages.rs  (+4 more)
crates/wayle-shell/src/watchers/: color_extractor.rs  css.rs  location.rs  mod.rs  monitors.rs  notification.rs  osd.rs  scss_dev.rs  sysinfo.rs  wallpaper.rs  weather.rs
crates/wayle-styling/: Cargo.toml  build.rs
crates/wayle-styling/scss/: _base.scss  _palette.scss  _tokens.scss  _variables.scss  main.scss
crates/wayle-styling/scss/base/: _index.scss
crates/wayle-styling/scss/components/: _index.scss
crates/wayle-styling/scss/modules/: _cava.scss  _index.scss  _systray.scss  _workspaces.scss
crates/wayle-styling/scss/primitives/: _index.scss
crates/wayle-styling/scss/tokens/: _index.scss
crates/wayle-styling/src/: error.rs  errors.rs  lib.rs
crates/wayle-styling/src/palette_provider/: color.rs  matugen.rs  mod.rs  pywal.rs  wallust.rs
crates/wayle-widgets/: Cargo.toml
crates/wayle-widgets/src/: icons.rs  lib.rs  styling.rs  utils.rs  watchers.rs
crates/wayle-widgets/src/components/: mod.rs
crates/wayle-widgets/src/primitives/: mod.rs
wayle/: Cargo.toml
wayle/src/: lib.rs  main.rs
wayle/src/cli/: app.rs  dbus.rs  mod.rs  style.rs
wayle/src/cli/audio/: commands.rs  input_mute.rs  input_volume.rs  mod.rs  mute.rs  output_mute.rs  output_volume.rs  proxy.rs  sinks.rs  sources.rs  status.rs  volume.rs
wayle/src/cli/config/: commands.rs  default.rs  get.rs  mod.rs  reset.rs  schema.rs  set.rs  watch.rs
wayle/src/cli/icons/: commands.rs  export.rs  import.rs  install.rs  list.rs  mod.rs  open.rs  remove.rs  setup.rs  sources.rs
wayle/src/cli/idle/: commands.rs  duration.rs  mod.rs  off.rs  on.rs  proxy.rs  remaining.rs  status.rs  toggle.rs
wayle/src/cli/media/: active.rs  commands.rs  info.rs  list.rs  loop_mode.rs  mod.rs  next.rs  play_pause.rs  previous.rs  proxy.rs  resolve.rs  seek.rs  shuffle.rs  utils.rs
wayle/src/cli/notify/: commands.rs  dismiss.rs  dismiss_all.rs  dnd.rs  list.rs  mod.rs  proxy.rs  status.rs
wayle/src/cli/panel/: commands.rs  hide.rs  inspect.rs  mod.rs  proxy.rs  restart.rs  settings.rs  show.rs  start.rs  status.rs  stop.rs  toggle.rs
wayle/src/cli/power/: commands.rs  cycle.rs  list.rs  mod.rs  proxy.rs  set.rs  status.rs
wayle/src/cli/systray/: activate.rs  commands.rs  list.rs  mod.rs  proxy.rs  status.rs
wayle/src/cli/wallpaper/: commands.rs  config.rs  control.rs  cycle.rs  info.rs  mod.rs  proxy.rs  set.rs
wayle/src/config/: error.rs  mod.rs
wayle/src/config/clock/: general.rs  styling.rs
wayle/src/config/infrastructure/: service.rs  toml_path.rs  watcher.rs
wayle/src/config/loading/: mod.rs
wayle/src/config/schemas/: battery.rs  media.rs  modules.rs  styling.rs
wayle/src/config_runtime/: broadcast.rs  changes.rs  diff.rs  mod.rs  runtime.rs
wayle/src/core/: init.rs  mod.rs  state.rs  tracing.rs
wayle/src/docs/: generator.rs  mod.rs  module.rs  registry.rs  schema.rs
(+846 files in other folders)
