[workspace]
resolver = "2"
exclude = ["sandbox"]
members = [
    "crates/wayle-audio",
    "crates/wayle-battery",
    "crates/wayle-bluetooth",
    "crates/wayle-cava",
    "crates/wayle-common",
    "crates/wayle-config",
    "crates/wayle-derive",
    "crates/wayle-hyprland",
    "crates/wayle-media",
    "crates/wayle-network",
    "crates/wayle-notification",
    "crates/wayle-power-profiles",
    "crates/wayle-styling",
    "crates/wayle-systray",
    "crates/wayle-traits",
    "crates/wayle-widgets",
    "wayle",
]

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "GPL-3.0-only"
authors = ["Jas Singh"]
repository = "https://github.com/Jas-SinghFSU/wayle"
rust-version = "1.85"

[workspace.dependencies]
async-stream = "0.3.6"
async-trait = "0.1.89"
bitflags = "2.9.4"
chrono = { version = "0.4.42", features = ["clock"] }
clap = { version = "4.5.48", features = ["derive", "color"] }
derive_more = { version = "2.0.1", default-features = false, features = [
    "debug",
] }
futures = "0.3.31"
grass = "0.13.4"
libpulse-binding = "2.30.1"
libc = "0.2.176"
notify = "8"
rand = "0.9.2"
relm4 = { version = "0.10.0", features = ["macros"] }
relm4-components = { version = "0.10.0" }
schemars = { version = "1.0.4", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
toml = "0.9.7"
tokio = { version = "1.47.1", features = ["full", "time"] }
tokio-util = "0.7.16"
tokio-stream = { version = "0.1.17", features = ["sync"] }
tracing = "0.1.41"
tracing-attributes = "0.1.30"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "json"] }
tracing-appender = "0.2.3"
zbus = "5.11.0"
rusqlite = { version = "0.37.0", features = ["bundled"] }

gtk4 = { version = "0.10.1" }
gdk-pixbuf = { version = "0.21.2" }
glib = { version = "0.21.3" }

wayle-audio = { path = "crates/wayle-audio" }
wayle-battery = { path = "crates/wayle-battery" }
wayle-bluetooth = { path = "crates/wayle-bluetooth" }
wayle-common = { path = "crates/wayle-common" }
wayle-config = { path = "crates/wayle-config" }
wayle-derive = { path = "crates/wayle-derive" }
wayle-media = { path = "crates/wayle-media" }
wayle-network = { path = "crates/wayle-network" }
wayle-notification = { path = "crates/wayle-notification" }
wayle-power-profiles = { path = "crates/wayle-power-profiles" }
wayle-styling = { path = "crates/wayle-styling" }
wayle-systray = { path = "crates/wayle-systray" }
wayle-traits = { path = "crates/wayle-traits" }
wayle-widgets = { path = "crates/wayle-widgets" }

[workspace.lints.rust]
unsafe_code = "deny"
missing_docs = "warn"

[workspace.lints.clippy]
inefficient_to_string = "warn"
large_types_passed_by_value = "warn"
manual_ok_or = "warn"
module_name_repetitions = "allow"
similar_names = "allow"
unwrap_used = "deny"
expect_used = "deny"
panic = "warn"
cognitive_complexity = "warn"
too_many_lines = "warn"
missing_errors_doc = "warn"
missing_panics_doc = "warn"
