[package]
name = "wayle"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Wayland services CLI"

[[bin]]
name = "wayle"
path = "src/main.rs"

[dependencies]
chrono.workspace = true
clap.workspace = true
futures.workspace = true
reqwest.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["full"] }
toml.workspace = true
tracing.workspace = true
tracing-appender.workspace = true
tracing-subscriber.workspace = true
zbus.workspace = true

# Common dependencies
wayle-common = { workspace = true, features = ["schema"] }
wayle-config = { workspace = true, features = ["schema"] }

# Service dependencies (for CLI commands)
wayle-audio.workspace = true
wayle-icons.workspace = true
wayle-media.workspace = true
wayle-notification.workspace = true
wayle-power-profiles.workspace = true
wayle-systray.workspace = true
wayle-wallpaper.workspace = true

[lints]
workspace = true
