[package]
name = "wayle-common"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
toml.workspace = true
tracing.workspace = true
wildcard.workspace = true
zbus.workspace = true

schemars = { workspace = true, optional = true }
owo-colors = "4.2.3"

[features]
default = []
schema = ["schemars"]

[dev-dependencies]
tempfile = "3.15"

[lints]
workspace = true
