[package]
name = "wayle-common"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
futures.workspace = true
minijinja.workspace = true
owo-colors = "4.2.3"
schemars = { workspace = true, optional = true }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tokio-util.workspace = true
toml.workspace = true
tracing.workspace = true
wildcard.workspace = true
zbus.workspace = true

[dev-dependencies]
tempfile = "3.15"

[features]
default = []
schema = ["schemars"]

[lints]
workspace = true
