[package]
name = "wayle-config"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Configuration management for Wayle"

[features]
default = []

[dependencies]
notify.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true

wayle-common = { workspace = true, features = ["schema"] }
wayle-derive.workspace = true

[lints]
workspace = true
