[package]
name = "wayle-config"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Configuration management for Wayle"
repository.workspace = true
license.workspace = true

[dependencies]
dotenvy.workspace = true
glob.workspace = true
notify.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_json_path.workspace = true
thiserror.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
wayle-common = { workspace = true, features = ["schema"] }
wayle-derive.workspace = true

[features]
default = []

[lints]
workspace = true
