[package]
name = "wayle-derive"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
syn = { version = "2.0", features = ["derive", "extra-traits", "full"] }
proc-macro2 = "1.0"

[dev-dependencies]
wayle-common = { path = "../wayle-common" }
toml.workspace = true
tokio.workspace = true

[lints]
workspace = true
