[package]
name = "wayle-i18n"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
i18n-embed.workspace = true
i18n-embed-fl.workspace = true
rust-embed.workspace = true
unic-langid.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]

[lints]
workspace = true
