[package]
name = "wayle-widgets"
description = "Reusable GTK4/Relm4 widget library for Wayle"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
futures.workspace = true
glib.workspace = true
gtk4 = { workspace = true, features = ["v4_10"] }
relm4.workspace = true
wayle-common.workspace = true
wayle-config.workspace = true

[lints]
workspace = true
