[package]
name = "wayle-widgets"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Reusable GTK4/Relm4 widget library for Wayle"
repository.workspace = true
license.workspace = true

[dependencies]
futures.workspace = true
glib.workspace = true
gtk4 = { workspace = true, features = ["v4_10"] }
relm4.workspace = true
tokio.workspace = true
tracing.workspace = true
wayle-common.workspace = true
wayle-config.workspace = true

[lints]
workspace = true
